# ggez

./: CMakeLists.txt
include/ggez/aux/: byte_order.hpp  byte_swap.hpp  client_id_set.hpp  enet_host_deleter.hpp  from_bytes.hpp  instance_tracker.hpp  instance_tracker.inl  start_lifetime_as.hpp
include/ggez/core/: client_id_t.hpp  errc.hpp  result.hpp
include/ggez/infra/: byte_order.hpp  client_counts_t.hpp  client_info.hpp  client_model.hpp  data_source.hpp  disconnect_reason.hpp  discrepancy_policy.hpp  endpoint.hpp  host_info.hpp  ip_address.hpp  ip_address.inl  network_address_view.hpp  network_data_id.hpp  network_data_offset.hpp  network_data_policy.hpp  network_port.hpp  network_stats_t.hpp  step_info.hpp
include/ggez/session/: basic.hpp  basic_base.hpp  basic_base.inl  basic_client.hpp  basic_client.inl  basic_client_base.hpp  basic_client_base.inl  basic_host.hpp  basic_host.inl  callbacks.hpp  config_t.hpp  function.hpp  metadata_t.hpp  model.hpp  timeout_ms_t.hpp
include/ggez/traits/: config_like.hpp  has_valid_client_count_upper_limits.hpp  is_implicit_lifetime.hpp  is_implicitly_creatable_by_copy.hpp  is_network_transferrable.hpp  metadata_like.hpp
test/: CMakeLists.txt  debug_callbacks.hpp  session_types.hpp  test_data.hpp  test_host.cpp  test_player.cpp
